fixed particles cdn

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="https://www.linkedin.com/notifications/" target="_blank"><i class="fab fa-linkedin fa-4x"></i></a>
         </div>
     </main>
-    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="js/particles.js"></script>
 </body>
 </html>
