--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
     </main>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="js/particles.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
