updated linkedin link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1>I am a <span class="underline">Graphic Designer</span> just turned into a <span class="underline">Full Stack Developer</span>.</h1>
         </div> 
         <div class="social">
-            <a href="https://github.com/le-front" target="_blank"><i class="fab fa-github fa-4x"></i></a>
+            <a href="https://github.com/rapinoso" target="_blank"><i class="fab fa-github fa-4x"></i></a>
             <a href="https://www.linkedin.com/notifications/" target="_blank"><i class="fab fa-linkedin fa-4x"></i></a>
         </div>
     </main>
